--- a/cmd/front/src/app/features/admin/components/admin-dashboard/admin-dashboard.component.html
+++ b/cmd/front/src/app/features/admin/components/admin-dashboard/admin-dashboard.component.html
@@ -1,13 +1,21 @@
 <div class="admin-dashboard">
-    <h1>Panel de Notificaciones</h1>
-    
-    <!--div class="buttons-container">
-      <button routerLink="/main/create-user">👤 Crear Usuario</button>
-      <button routerLink="/main/create-event">📅 Crear Evento</button>
-      <button routerLink="/main/assign-guests">🎟️ Asignar Invitados</button>
-      <button routerLink="/main/view-users">📋 Ver Usuarios</button>
-    </div-->
+  <h1>Panel de Notificaciones</h1>
 
-    <!--button (click)="requestPermission()">Activar Notificaciones</button-->
-  </div>
-  
+  <!-- Tabla para mostrar los mensajes -->
+  <table >
+    <thead>
+      <tr>
+        <th>Título</th>
+        <th>Mensaje</th>
+        <th>Tipo</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let message of messages">
+        <td>{{ message.title }}</td>
+        <td>{{ message.body }}</td>
+        <td>{{ message.tipo }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
